--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ PythonForProgrammers/
 RomeoAndJuliet.png
 deep_learning_cookbook/
 GoogleNews-vectors-negative300.bin
+20_newsgroup/
+glove.6B/
+music_stuff/
+travel_stackexchange/
